crates/squawk_parser/tests/snapshots/tests__drop_text_search_dict_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_text_search_dict.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_TEXT_SEARCH_DICT
    DROP_KW "drop"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_TEXT_SEARCH_DICT
    DROP_KW "drop"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- restrict"
  WHITESPACE "\n"
  DROP_TEXT_SEARCH_DICT
    DROP_KW "drop"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
