crates/squawk_parser/tests/snapshots/tests__drop_user_mapping_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_user_mapping.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_USER_MAPPING
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    MAPPING_KW "mapping"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE " "
    USER_MAPPING_ROLE
      USER_KW "user"
    WHITESPACE " "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_USER_MAPPING
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    MAPPING_KW "mapping"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE " "
    USER_MAPPING_ROLE
      ROLE_REF
        ROLE_REF_CURRENT_ROLE
          CURRENT_ROLE_KW "current_role"
    WHITESPACE " "
    SERVER_CLAUSE
      SERVER_KW "server"
      WHITESPACE " "
      SERVER_REF
        IDENT "some_server_name"
    SEMICOLON ";"
  WHITESPACE "\n\n"
